fixed overflow, needed to set width on hero <p>

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ body {
     position: relative;
     top: 10%;
     left: 5%;
+    width: 90%;
 }
 
 .title-effect > span {
